# Robotic_Scrabble

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  UR5_SETUP.txt  open_gripper.py  ur5e.urdf
doxygen_documentation/: add__collisions_8cpp__incl.map  demo_8cpp__incl.map  files.html  graph_legend.html  index.html  scrabble__robot__control_8cpp__incl.map  scrabble__robot__control_8cpp__incl.md5
doxygen_documentation/search/: all_0.js  all_3.js  all_4.js  all_6.js  files_0.js  files_2.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js
fmauch_universal_robot/universal_robots/: package.xml
fmauch_universal_robot/ur5e_gripper_moveit_config/: .setup_assistant  package.xml
laboratorio/: laboratorio.sdf
motion_plan/: CMakeLists.txt  package.xml
motion_plan/msg/: ur5e_unity_joint.msg
motion_plan/scripts/: attach.py
motion_plan/src/: add_collisions.cpp  demo.cpp  doc  motion_plan.cpp  quat_to_rotm.py  scrabble_robot_control.cpp  tf_publisher.py  unity_subscriber.cpp
scrabble/: CMakeLists.txt  package.xml
scrabble/Scrabble/: Scrabble Problem.pptx  Scrabble.sln
scrabble/msg/: Board_State.msg  New_Word.msg  PutTile.msg  Rack.msg
scrabble/scripts/: board.txt  boardValue.txt  board_state_publisher.py  dictionary.txt  dictionary2.txt  doc  main.py  (+8 more)
soft_robotics/soft_robotics_description/: CMakeLists.txt  package.xml
soft_robotics/soft_robotics_description/scripts/: client.py  demo.py  gripper_controller.py
soft_robotics/soft_robotics_description/urdf/: soft_robotics_gripper.urdf.xacro  soft_robotics_trasmission.urdf.xacro
(+117 files in other folders)
